# Linear-Algebra-Toolkit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: LAT.h  Matrix.h  Vector.h
src/: LAT.cpp  Matrix.cpp  Vector.cpp  main.cpp
